bg fixed on mobile

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -11,7 +11,6 @@ header.masthead {
         url('../assets/img/header/bw/1.jpg');
     background-repeat: no-repeat;
     background-attachment: scroll;
-    background-attachment: scroll, fixed;
     background-position: center;
     background-size: 100%, cover;
     background-blend-mode: multiply;
@@ -49,10 +48,11 @@ header.masthead {
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
     header.masthead {
         padding-top: 17rem;
         padding-bottom: 12.5rem;
+        background-attachment: scroll, fixed;
         .masthead-subheading {
             font-size: 2.25rem;
             font-style: italic;
